# TrueMemory

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md.example  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: reranker_shootout.py  reranker_shootout_20.py
benchmarks/locomo/: .gitignore  BENCHMARK_RESULTS.md  EVAL_CONFIG.md  README.md  requirements.txt
benchmarks/locomo/data/: README.md
benchmarks/locomo/results/: bm25_v2_run1.json  engram_v2_run1.json  evermemos_v2_run1.json  mem0_v2_run1.json  neuromem_base_v2_run1.json  neuromem_pro_v2_run1.json  neuromem_pro_v3_modal.json  rag_v2_run1.json  supermemory_v2_run1.json  truememory_base_v2_run1.json  truememory_pro_v2_run1.json  truememory_pro_v3_modal.json
benchmarks/locomo/scripts/: README.md  bench_bm25.py  bench_engram.py  bench_evermemos.py  bench_mem0.py  bench_neuromem_base.py  bench_neuromem_pro.py  bench_rag.py  bench_supermemory.py  bench_truememory_base.py  bench_truememory_pro.py  modal_benchmark.py  verify_scores.py
neuromem/: __init__.py  client.py  clustering.py  consolidation.py  engine.py  fts_search.py  hybrid.py  hyde.py  mcp_server.py  personality.py  predictive.py  query_classifier.py  reranker.py  salience.py  storage.py  temporal.py  vector_search.py
neuromem/ingest/: CLAUDE_TEMPLATE.md  __init__.py  cli.py  dedup.py  encoding_gate.py  extractor.py  pipeline.py
neuromem/ingest/hooks/: __init__.py  compact.py  session_start.py  stop.py  user_prompt_submit.py
tests/: test_memory.py
tests/ingest/: test_cli_preflight.py  test_encoding_gate.py  test_extractor.py  test_integration.py  test_models_retry.py  test_pipeline_reset.py  test_production_fixes.py  test_robustness_fixes.py  test_transcript.py  test_transcript_real_format.py
tests/ingest/fixtures/: sample_claude_code_transcript.json  sample_real_claude_code_transcript.jsonl
truememory/: __init__.py  client.py  clustering.py  consolidation.py  engine.py  fts_search.py  hybrid.py  hyde.py  mcp_server.py  personality.py  predictive.py  query_classifier.py  reranker.py  salience.py  storage.py  temporal.py  vector_search.py
truememory/ingest/: CLAUDE_TEMPLATE.md  __init__.py  cli.py  dedup.py  encoding_gate.py  extractor.py  models.py  pipeline.py  transcript.py
truememory/ingest/hooks/: __init__.py  compact.py  session_start.py  stop.py  user_prompt_submit.py
